# pytorch-tutorial

./: .gitignore  Makefile  main.py  pyproject.toml
experiments/ch01/: ch01.ipynb
experiments/ch02/: ch02.ipynb  download.py
experiments/ch04/: ch04.ipynb
experiments/ch05/: ch05.ipynb
experiments/ch06/: ch06.ipynb
experiments/ch07/: ch07.ipynb
experiments/chap03/: chp03.ipynb
requirements/: requirements.txt
