[project]
name = "pytorch-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchtext>=0.18.0",
    "torchvision>=0.22.1",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]
